Grease Pencil Line thickness #38124

Closed
opened 2014-01-08 13:26:13 +01:00 by Adam Earle · 9 comments

System Information
Operating system: windows 7
Graphics card: GeForce GTS 250
Monitor: Cintq 21UX

Blender Version
Broken: Greas Pencil

Work flow I am blender as an advanced storyboarding application similar to toonboom pro if all comes of well with the testing we will be using it with cartoon networks new TV show - Oooh exciting

Worked: I am not sure I have been on blender about 6 months and using it to replace programs

Short description of error
The Greas Pencil Line weight changing
If the pressure is light and then heavy at the end the lines start tail becomes fat and the end tail tail becomes thin
(The client is rejecting blender so far because of this)

Exact steps for others to reproduce the error
Grease pencil settting have been played with exstensively
Typical advertise way of grease pencil - just whold on the keyboard

tested on a Wacom Cintiq | Wacom tablet | Wacom bamboo | Windows 7 Surface Pro (First Edition)

Just heads up

thanks mate

Adam Earle

**System Information** Operating system: windows 7 Graphics card: GeForce GTS 250 Monitor: Cintq 21UX **Blender Version** Broken: Greas Pencil Work flow I am blender as an advanced storyboarding application similar to toonboom pro if all comes of well with the testing we will be using it with cartoon networks new TV show - Oooh exciting Worked: I am not sure I have been on blender about 6 months and using it to replace programs **Short description of error** The Greas Pencil Line weight changing If the pressure is light and then heavy at the end the lines start tail becomes fat and the end tail tail becomes thin (The client is rejecting blender so far because of this) **Exact steps for others to reproduce the error** Grease pencil settting have been played with exstensively Typical advertise way of grease pencil - just whold on the keyboard tested on a Wacom Cintiq | Wacom tablet | Wacom bamboo | Windows 7 Surface Pro (First Edition) Just heads up thanks mate Adam Earle
Author

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Adam Earle 2014-01-08 13:26:13 +01:00
Author

Added subscriber: @AdamEarle

Added subscriber: @AdamEarle
Campbell Barton was unassigned by Bastien Montagne 2014-01-08 16:46:27 +01:00
Bastien Montagne self-assigned this 2014-01-08 16:46:27 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I can confirm this with my own (cheap) G-Pen 450! Sometimes it works OK, but sometimes it breaks (thin parts becoming thick).

As I already worked in this area, and think @ideasman42 has already a bunch of tasks and reviews assigned, will steal this one from him.

I can confirm this with my own (cheap) G-Pen 450! Sometimes it works OK, but sometimes it breaks (thin parts becoming thick). As I already worked in this area, and think @ideasman42 has already a bunch of tasks and reviews assigned, will steal this one from him.
Author

I'm happy to do any testing for you if you need

Adam

I'm happy to do any testing for you if you need Adam

This issue was referenced by blender/blender-addons-contrib@d785c64397

This issue was referenced by blender/blender-addons-contrib@d785c64397bc6ec19cea0563fa1de982bdda28c6

This issue was referenced by blender/blender@d785c64397

This issue was referenced by blender/blender@d785c64397bc6ec19cea0563fa1de982bdda28c6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit blender/blender@d785c64397.

Closed by commit blender/blender@d785c64397.
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#38124
No description provided.